# loldle-solver

./: .gitignore  preproc.parquet  pyproject.toml  video.ipynb
loldle_solver/: preproc.py  scraper.py  simulator.py  simulator_v2.py  solver.py
notebooks/: all_games.ipynb  descriptive_analysis.ipynb  first_guess.ipynb  first_guess_v2.ipynb  live_game.ipynb
notebooks/live_games/: day2.ipynb
