[tool.poetry]
name = "loldle-solver"
version = "0.1.0"
description = ""
authors = ["Victor Severo <victor.severo.miranda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.2.1"
selenium = "^4.18.1"
polars = "^0.20.15"
pyarrow = "^15.0.1"
pygame = "^2.5.2"


[tool.poetry.group.dev.dependencies]
seaborn = "^0.13.2"
ipykernel = "^6.29.3"
tqdm = "^4.66.2"
jupyter = "^1.0.0"
ipywidgets = "^8.1.2"
manim = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
